fix guided tour visiblity

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -98,6 +98,13 @@ input[type=number] {
   border-color: #4F8A10 !important;
   color: #4F8A10;
 }
+joyride-step{
+  z-index: 10000;
+  position: relative;
+}
+.backdrop-container{
+  z-index:10000 !important;
+}
 @keyframes show {
   0%{
     opacity:0;
